@@ -1,5 +1,11 @@
 2017-10-22 Riccardo Mottola <rm@gnu.org>
 
+	* DBSoap.h
+	* DBSoap.m
+	Accessors for object describe cache and setting.
+
+2017-10-22 Riccardo Mottola <rm@gnu.org>
+
 	* DBFileWriter.m (formatComplexObject:)
 	Skip Id field only if it is an empty string, not otherwise.
 
